[tool.poetry]
name = "homelab"
version = "0.1.0"
description = "My homelab configurations"
authors = ["remigourdon <gourdon.remi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ansible-core = "^2.16.3"
netaddr = "^1.1.0"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "^24.2.0", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
